--- a/example.bib
+++ b/example.bib
@@ -9,6 +9,17 @@
   doi={10.1126/science.aap9559}, 
 }
 
+@article{2016_US_Presidential_election,
+  author={Bessi, Alessandro and Ferrara, Emilio}, 
+  journal={First Monday}, 
+  title={Social bots distort the 2016 U.S. Presidential election online discussion}, 
+  year={2016}, 
+  volume={21}, 
+  number={}, 
+  pages={}, 
+  doi={10.5210/fm.v21i11.7090}, 
+}
+
 @inproceedings{devlin-etal-2019-bert,
     author    = {Devlin, Jacob  and
       Chang, Ming-Wei  and
@@ -21,73 +32,12 @@
     pages     = {4171-4186}
 }
 
-@article{article_example,
-  author={Shang-Hua Gao and Ming-Ming Cheng and Kai Zhao and Xin-Yu Zhang and Ming-Hsuan Yang and Philip Torr}, 
-  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
-  title={{Res2Net}: A New Multi-scale Backbone Architecture}, 
-  year={2021}, 
-  volume={43}, 
-  number={2}, 
-  pages={652-662}, 
-  doi={10.1109/TPAMI.2019.2938758}, 
-}
-
-@inproceedings{inproceedings_example,
-    author    = {Zhai, Jiang-Tian and Zhang, Qi and Wu, Tong and Chen, Xing-Yu and Liu, Jiang-Jiang and Cheng, Ming-Ming},
-    title     = {{SLAN}: Self-Locator Aided Network for Vision-Language Understanding},
-    booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
-    month     = {October},
-    year      = {2023},
-    pages     = {21949-21958}
-}
-
-@incollection{incollection_example,
-  author      = {作者},
-  title       = {文章题目},
-  editor      = {编者},
-  booktitle   = {文集标题},
-  address     = {出版地},
-  publisher   = {出版社},
-  year        = {出版年},
-  pages       = {页码},
-}
-
-@book{book_example,
-  author      = {作者},
-  title       = {书名},
-  edition     = {版次（初版不写）},
-  address     = {出版社地点},
-  publisher   = {出版社},
-  year        = {出版年},
-}
-
-@phdthesis{phdthesis_example,
-  author      = {作者},
-  title       = {文章题目},
-  school      = {单位名称},
-  address     = {单位地点},
-  year        = {年},
-}
-
-@mastersthesis{mastersthesis_example,
-  author      = {作者},
-  title       = {文章题目},
-  school      = {单位名称},
-  address     = {单位地点},
-  year        = {年},
-}
-
-@techreport{techreport_example,
-  author      = {作者},
-  title       = {文章题目},
-  address     = {单位地点},
-  institution = {单位},
-  number      = {报告编号},
-  year        = {年},
-}
-
-@patent{patent_example,
-  author      = {专利拥有人},
-  title       = {专利名称, 专利授权国家},
-  date        = {专利授权日期},
+@inproceedings{DSSM,
+    author    = {Elkahky, Ali Mamdouh and Song, Yang and He, Xiaodong},
+    title     = {A Multi-View Deep Learning Approach for Cross Domain User Modeling in Recommendation Systems},
+    doi = {10.1145/2736277.2741667},
+    booktitle = {Proceedings of the 24th International Conference on World Wide Web},
+    month     = {},
+    year      = {2015},
+    pages     = {278–288}
 }
