--- a/main.tex
+++ b/main.tex
@@ -21,7 +21,7 @@
       name         = {吴浩哲},
       name*        = {Wu Haozhe},
       affiliations = {aff1},
-      email        = {wuhaozhe1211@qq.com},
+      email        = {wuhaozhe@stu.xjtu.edu.cn},
     },
   },
   affiliations = {
