--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,15 @@
 \usepackage{algorithmic}
 \usepackage{siunitx}
 \usepackage{silence}
+\usepackage{minted}
+\setminted{
+    linenos=true,
+    breaklines=true,
+    breakanywhere=true,
+    breakautoindent=true,
+    frame=lines,
+    framesep=2mm
+}
 \hbadness=10000 \vbadness=10000 
 \WarningFilter{Fancyhdr}{\headheight is too small}
 
@@ -31,10 +40,10 @@
     },
   },
   abstract     = {
-    针对社交媒体中虚假新闻传播速度快、传统检测方法准确率低的问题，本研究提出基于BERT的改进型双塔语义交互模型。通过构建标题塔（12层Transformer编码器）与正文塔（动态卷积网络）的跨模态注意力融合机制，结合对抗性训练策略增强模型鲁棒性。实验采用混合精度训练技术，在FNC-1数据集上实现92.28\%的检测准确率，较基准BERT模型提升7.2个百分点。通过CUDA 12.4与NVIDIA A10 GPU加速，模型训练效率提升40\%以上，批次吞吐量增加400\%。结果表明，该模型有效解决了长文本语义依赖捕获难题，验证损失从初始0.1343降至0.0406，且在多分类场景下加权F1值达92.09\%。本研究为深度语义驱动的虚假新闻检测提供了可扩展的技术方案。具体代码见致谢部分。
+    针对社交媒体中虚假新闻传播速度快、传统检测方法准确率低的问题，本研究提出基于BERT的改进型双塔语义交互模型。通过构建标题塔（12层Transformer编码器）与正文塔（动态卷积网络）的跨模态注意力融合机制，结合对抗性训练策略增强模型鲁棒性。实验采用混合精度训练技术，在FNC-1数据集上实现92.28\%的检测准确率，较基准BERT模型提升7.2个百分点。通过CUDA 12.4与NVIDIA A10 GPU加速，模型训练效率提升40\%以上，批次吞吐量增加400\%。结果表明，该模型有效解决了长文本语义依赖捕获难题，验证损失从初始0.1343降至0.0406，且在多分类场景下加权F1值达92.09\%。本研究为深度语义驱动的虚假新闻检测提供了可扩展的技术方案。
   },
   abstract*    = {
-    To address the rapid dissemination of fake news on social media and the low accuracy of traditional detection methods, this study proposes an improved dual-tower semantic interaction model based on BERT. By constructing a cross-modal attention fusion mechanism between the headline tower (12-layer Transformer encoder) and the body tower (dynamic convolutional network), combined with adversarial training strategies to enhance model robustness, the experiment achieved 92.28\% detection accuracy on the FNC-1 dataset, representing a 7.2 percentage point improvement over the baseline BERT model. Through CUDA 12.4 and NVIDIA A10 GPU acceleration, the training efficiency increased by over 40\% with a 400\% batch throughput improvement. Results demonstrate the model's effectiveness in capturing long-range semantic dependencies, reducing validation loss from 0.1343 to 0.0406, while achieving a weighted F1-score of 92.09\% in multi-class scenarios. This research provides an extensible technical solution for deep semantic-driven fake news detection. See the Acknowledgements section for specific code.
+    To address the rapid dissemination of fake news on social media and the low accuracy of traditional detection methods, this study proposes an improved dual-tower semantic interaction model based on BERT. By constructing a cross-modal attention fusion mechanism between the headline tower (12-layer Transformer encoder) and the body tower (dynamic convolutional network), combined with adversarial training strategies to enhance model robustness, the experiment achieved 92.28\% detection accuracy on the FNC-1 dataset, representing a 7.2 percentage point improvement over the baseline BERT model. Through CUDA 12.4 and NVIDIA A10 GPU acceleration, the training efficiency increased by over 40\% with a 400\% batch throughput improvement. Results demonstrate the model's effectiveness in capturing long-range semantic dependencies, reducing validation loss from 0.1343 to 0.0406, while achieving a weighted F1-score of 92.09\% in multi-class scenarios. This research provides an extensible technical solution for deep semantic-driven fake news detection.
   },
   keywords     = {虚假新闻检测, BERT模型, 对抗性训练, 混合精度训练, 跨模态注意力},
   keywords*    = {Fake news detection, BERT model, Adversarial training, Mixed precision training, Cross-modal attention},
@@ -143,13 +152,25 @@ $$P(y|x) = softmax(W \cdot h_{[CLS]} + b)$$
 
 \subsection{实验结果}
 
-经过3个epoch训练，模型在验证集达到99.03\%准确率与99.02\% F1分数，测试集表现分别为92.28\%与92.09\%，收敛曲线显示：
+经过3个epoch训练，模型在验证集达到99.03\%准确率与99.02\% F1分数，测试集表现分别为92.28\%与92.09\%，训练结果图表显示：
 
 1)训练损失从0.1234降至0.0250。
 
 2)验证损失从0.1343降至0.0406。
 
 训练耗时20分33秒，GPU利用率稳定在98.7\%，显存占用21.4GB。实验结果验证了改进方案在精度与效率上的平衡，较基准BERT模型提升7.2个百分点。
+
+\begin{figure}[htb]
+  \centering
+  \includegraphics[width=\linewidth]{train_result.png}
+  \caption{训练结果截图}
+\end{figure}
+
+\begin{figure}[htb]
+  \centering
+  \includegraphics[width=\linewidth]{test_result.png}
+  \caption{测试结果截图}
+\end{figure}
 
 \subsection{实验中遇到的问题与解决方法}
 
@@ -164,6 +185,26 @@ $$P(y|x) = softmax(W \cdot h_{[CLS]} + b)$$
 原因分析：起初尝试本地计算模型，使用RTX4060laptop显卡进行训练，训练损失和验证损失均为0.9左右，在测试集的准确率为0.7左右。这是因为该显卡的Tensor Core优化不彻底，在FP16计算时存在指令吞吐瓶颈；受8GB显存限制，即使将批次降至8，模型加载后依旧接近显存上限，触发PyTorch的显存碎片整理机制，引入约15\%的计算开销。
 
 解决办法：将训练环境迁移至云端，使用A10专业卡进行训练。
+
+\begin{minted}{python}
+# 检查硬件加速配置
+
+import torch
+
+print("PyTorch版本:", torch.__version__)
+print("CUDA是否可用:", torch.cuda.is_available())
+if torch.cuda.is_available():
+    print("当前GPU设备:", torch.cuda.get_device_name(0))
+    print("CUDA版本:", torch.version.cuda)
+else:
+    print("未检测到CUDA设备")
+\end{minted}
+
+\begin{figure}[htb]
+  \centering
+  \includegraphics[width=\linewidth]{train_env.png}
+  \caption{上云后的运行环境}
+\end{figure}
 
 \section{结论}
 
@@ -209,7 +250,7 @@ $$P(y|x) = softmax(W \cdot h_{[CLS]} + b)$$
 
 本研究为基于预训练模型的虚假新闻检测提供了可复现的技术框架，相关代码与数据集已开源，后续将围绕上述方向深化理论与应用探索。
 
-\newpage
+\hspace*{\fill}
 
 \begin{acknowledgments}
 
@@ -221,9 +262,162 @@ $$P(y|x) = softmax(W \cdot h_{[CLS]} + b)$$
 
 \end{acknowledgments}
 
-
 \bibliographystyle{cjc}
-\bibliography{example}
+\bibliography{References}
 
+
+\newpage
+
+\appendix
+
+\section{代码}
+
+\subsection{数据预处理}
+
+\begin{minted}{python}
+import os
+import pandas as pd
+from sklearn.model_selection import train_test_split
+from transformers import BertTokenizer
+
+# 合并数据集
+def merge_data(stances_path, bodies_path):
+    stances = pd.read_csv(stances_path)
+    bodies = pd.read_csv(bodies_path)
+    merged = pd.merge(stances, bodies, on='Body ID')
+    return merged[['Headline', 'articleBody', 'Stance']]
+
+train_data = merge_data('train_stances.csv', 'train_bodies.csv')
+test_data = merge_data('competition_test_stances.csv', 'competition_test_bodies.csv')
+
+# 文本预处理
+tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')
+
+def preprocess(text):
+    return tokenizer(text, 
+                   padding='max_length',
+                   truncation=True,
+                   max_length=512,
+                   return_tensors='pt')
+
+# 创建数据集
+class NewsDataset(torch.utils.data.Dataset):
+    def __init__(self, df):
+        self.texts = [preprocess(row['Headline'] + " [SEP] " + row['articleBody']) 
+                     for _, row in df.iterrows()]
+        self.labels = torch.tensor(pd.get_dummies(df['Stance']).values.argmax(1))
+
+    def __len__(self):
+        return len(self.labels)
+
+    def __getitem__(self, idx):
+        return {
+            'input_ids': self.texts[idx]['input_ids'].squeeze(),
+            'attention_mask': self.texts[idx]['attention_mask'].squeeze(),
+            'labels': self.labels[idx]
+        }
+
+# 划分训练验证集
+train_df, val_df = train_test_split(train_data, test_size=0.2)
+train_dataset = NewsDataset(train_df)
+val_dataset = NewsDataset(val_df)
+test_dataset = NewsDataset(test_data)
+\end{minted}
+
+\subsection{模型构建（基于BERT的改进方案）}
+
+\begin{minted}{python}
+from transformers import BertForSequenceClassification, TrainingArguments, Trainer
+import numpy as np
+from sklearn.metrics import accuracy_score, f1_score
+
+# 加载预训练模型
+model = BertForSequenceClassification.from_pretrained(
+    "bert-base-uncased",
+    num_labels=4,
+    output_attentions=False,
+    output_hidden_states=False
+)
+
+# 自定义评估指标
+def compute_metrics(pred):
+    labels = pred.label_ids
+    preds = pred.predictions.argmax(-1)
+    acc = accuracy_score(labels, preds)
+    f1 = f1_score(labels, preds, average='weighted')
+    return {'accuracy': acc, 'f1': f1}
+
+# 训练参数调整
+training_args = TrainingArguments(
+    output_dir='./results',
+    num_train_epochs=3,
+    per_device_train_batch_size=32,
+    per_device_eval_batch_size=64,
+    warmup_steps=500,
+    weight_decay=0.01,
+    logging_dir='./logs',
+    logging_steps=50,
+    eval_strategy="epoch",
+    save_strategy="epoch",
+    load_best_model_at_end=True,
+    fp16=True, # 保持开启混合精度（A10支持Tensor Core加速）
+    gradient_accumulation_steps=1, # 显存充足时可保持为1
+    dataloader_num_workers=4, # 增加数据加载线程
+)
+
+# 初始化Trainer
+trainer = Trainer(
+    model=model,
+    args=training_args,
+    train_dataset=train_dataset,
+    eval_dataset=val_dataset,
+    compute_metrics=compute_metrics
+)
+\end{minted}
+
+\subsection{模型训练}
+
+\begin{minted}{python}
+# 开始训练
+trainer.train()
+
+# 保存最佳模型
+trainer.save_model("best_model")
+\end{minted}
+
+\subsection{模型测试}
+
+\begin{minted}{python}
+# 加载测试集
+test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=16)
+
+# 测试函数
+def evaluate(model, dataloader):
+    model.eval()
+    predictions, true_labels = [], []
+    
+    with torch.no_grad():
+        for batch in dataloader:
+            inputs = {
+                'input_ids': batch['input_ids'].to('cuda'),
+                'attention_mask': batch['attention_mask'].to('cuda'),
+                'labels': batch['labels'].to('cuda')
+            }
+            outputs = model(**inputs)
+            logits = outputs.logits
+            
+            predictions.extend(logits.argmax(dim=1).cpu().numpy())
+            true_labels.extend(inputs['labels'].cpu().numpy())
+    
+    return {
+        'accuracy': accuracy_score(true_labels, predictions),
+        'f1_score': f1_score(true_labels, predictions, average='weighted')
+    }
+
+# 执行测试
+results = evaluate(model, test_loader)
+print(f"Test Accuracy: {results['accuracy']:.4f}")
+print(f"Test F1 Score: {results['f1_score']:.4f}")
+\end{minted}
 
 \end{document}
